...
    @StateObject var store: PreferencesViewDelegate = .init()
    @State var showReportAProblem: Bool = false

    var body: some View {
        List {
            NavigationLink(destination: { InfoView(store: store) }) {
                Label("General Information", systemImage: "server.rack")
            }
            .tag(0)
            .accessibilityIdentifier("infoViewLink")

            NavigationLink(destination: { ClientView(store: store) }) {
                Label("Client", systemImage: "tv")
            }
            .tag(1)
            .accessibilityIdentifier("clientViewLink")

            NavigationLink(destination: { DebugView(store: store) }) {
                Label("Debugging", systemImage: "exclamationmark.triangle")
...
